# zapret-gui

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  RELEASE.md  RUNBOOK.md  claude.md  cliff.toml  engine_log.txt  eslint.config.js  index.html  log.txt  main.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
.windsurf/workflows/: commit.md  gitignore.md  (+1 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_RULES.md  STYLE_GUIDE.md
engine/: general (ALT)_silent.bat  general (ALT10)_silent.bat  general (ALT3)_silent.bat  general (ALT5)_silent.bat  general (ALT6)_silent.bat  general (FAKE TLS AUTO ALT)_silent.bat  general (SIMPLE FAKE)_silent.bat
src/: App.css  App.jsx  config.js  main.jsx
src-tauri/: .gitignore  Cargo.toml  app.dev.manifest  app.manifest  build.rs  tauri.conf.json
src-tauri/data/: config.json
src-tauri/engine/: general (ALT11)_silent.bat  general (ALT2)_silent.bat  general (ALT4)_silent.bat  general (ALT7)_silent.bat  general (ALT8)_silent.bat  general (ALT9)_silent.bat  general (FAKE TLS AUTO ALT2)_silent.bat  general (FAKE TLS AUTO ALT3)_silent.bat  general (FAKE TLS AUTO)_silent.bat  general (SIMPLE FAKE ALT)_silent.bat  general (SIMPLE FAKE ALT2)_silent.bat  general_silent.bat  service.bat
src-tauri/resources/zapret-core/: README.md  README.ru.md
src-tauri/src/: app_error.rs  app_state.rs  autostart.rs  commands.rs  constants.rs  core_client.rs  engine.rs  lib.rs  main.rs  process_manager.rs  sys_utils.rs  tray.rs
(+31 files in other folders)
